[package]
name = "romanssr"
version = "0.1.0"
edition = "2021"


# これがフロント用wasmバンドルを生成するために必須
[lib]
name = "romanssr"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "romanssr"
path = "src/main.rs"
required-features = ["ssr"]

[package.metadata.leptos]
output-name = "romanssr"
site = "target/site"
site-pkg-dir = "pkg"
site-addr = "0.0.0.0:3000"
assets-dir = "assets"
# ここで指定しないとcargo leptosでのbuildが上手くいかない
bin-features = ["ssr"]
lib-features = ["hydrate"]
bin-target-triple = "x86_64-unknown-linux-gnu"

[dependencies]
leptos = { version = "0.8.15", default-features = false }
leptos_router = { version = "0.8.11", default-features = false }
leptos_axum = { version = "0.8", optional = true }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }

# サーバーサイド専用の依存
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
axum = { version = "0.8.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6.8", features = ["fs", "trace"], optional = true }
http = { version = "1.4.0", optional = true }

[features]
default = []
csr = ["leptos/csr", "leptos/nightly", "leptos_router/nightly"]
hydrate = ["leptos/hydrate", "leptos/nightly", "leptos_router/nightly"]
ssr = [
    "leptos/ssr",
    "leptos/nightly",
    "leptos_router/ssr",
    "leptos_router/nightly",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:http",
]